--- a/posts/templates/single.html
+++ b/posts/templates/single.html
@@ -1,1 +1,4 @@
 <h3>{{single_post.content}}</h3>
+<hr>
+<a href="{% url 'delete_post' single_post.id%}">delete Post</a>
+<a href="{% url 'edit_post' single_post.id%}"> Edit Post</a>
